# datadog-threadstats-python

./: .gitignore  README.md  setup.cfg  setup.py
examples/flask-app/: flask_app.py
src/datadog_threadstats/: __init__.py  periodic.py  threadstats.py
tests/: test_threadstats.py
