# under the 3-clause BSD style license (see LICENSE).
# This product includes software developed at Datadog (https://www.datadoghq.com/).
# Copyright 2019 Datadog, Inc.

[metadata]
name = datadog-threadstats
version = attr: datadog_threadstats.__version__
description = Library
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    api
    client
    datadog
author = Datadog, Inc.
author_email = packages@datadoghq.com
url = https://github.com/DataDog/datadog-threadstats-python
license = BSD
platforms = any
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/DataDog/datadog-threadstats-python/issues
    Documentation = https://docs.datadoghq.com/api/
    Source Code = https://github.com/DataDog/datadog-threadstats-python

[options]
packages = find:
package_dir=
    =src
include_package_data = True
python_requires = >=3.6
install_requires =
    datadog-api-client

[options.packages.find]
exclude = tests
where=src

[options.extras_require]
tests =
    pytest
    freezegun

[flake8]
max-line-length = 120

[tool:black]
line-length = 120
